--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -10,8 +10,13 @@
 /* Colors */
   $GRAY_1: #5C5C5C;
 
-  $GRAY_2: #E4E4E4;
+  $GRAY_2: #DEDEDE;
 
+  $PINK_1: #FF2682;
+
+  $PINK_SHADOW: rgba(255, 61, 131, .43);
+
+  $WHITE: #FFFFFF;
 
   $SHADOW_COLOR: rgba(0, 0, 0, .29);
 
