--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -8,7 +8,7 @@
   $TEXT_FONT: "Varela Round", Helvetica, sans-serif;
 
 /* Colors */
-  $GRAY_1: #5C5C5C;
+  $GRAY_1: #484848;
 
   $GRAY_2: #DEDEDE;
 
