--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,6 +1,7 @@
 .dc-section {
   position: relative;
-  margin-top: 200px;
+  margin-top: 100px;
+  padding-top: 100px;
 
   &>div {
     // position: relative;
@@ -14,7 +15,8 @@
     margin-top: 60px;
   }
   &--bottom {
-
+    position: relative;
+    top: -100px;
   }
   &--bottom-bg {
     position: absolute;
@@ -43,12 +45,20 @@
       top: -600px;
       content: '';
       display: block;
-      height: 100%;
+      height: 871px;
       left: 0;
       position: absolute;
       right: 0;
       transform: scale(1.2);
       z-index: -1;
+
+      @media screen and (min-width: $BP_XL) {
+        background-size: cover !important;
+      }
+      @media screen and (max-width: $BP_MD) {
+        top: -800px;
+        left: -100px;
+      }
     }
     &:after {
       background: inherit;
@@ -62,10 +72,33 @@
       right: 0;
       transform: scale(1.2);
       z-index: -1;  
+
+      @media screen and (min-width: $BP_XL) {
+        background-size: cover !important;
+      }
+      @media screen and (max-width: $BP_MD) {
+        top: 90%;
+        right: -200px;
+      }
     }
   }
   &--blue {
     background: $BLUE_1;
+
+    &:before {
+      background: url('../images/triangle_blue_top.png') no-repeat 0 0;
+      background-size: initial;
+    }
+    &:after {
+      background: url('../images/triangle_blue_bottom_special.png') no-repeat 100% 0;
+      background-size: initial;
+      height: 872px;
+      top: 85%;
+
+      @media screen and (max-width: $BP_MD) {
+        background: url('../images/triangle_blue_bottom.png') no-repeat 0 0;
+      }
+    }
   }
   &--red {
     background: $RED_1;
@@ -83,10 +116,45 @@
     &:after {
       background: url('../images/triangle_yellow_bottom.png') no-repeat 100% 0;
       background-size: initial;
+      top: 60%;
     }
   }
   &--orange {
     background: $ORANGE_1;
+  }
+  &--no-after {
+    &:after {
+      content: none;
+    }
+  }
+  &--no-before {
+    &:before {
+      content: none;
+    }
+  }
+  &--footer {
+    margin-top: 100px;
+    position: relative;
+
+    $FOOTER_WIDTH: 900px;
+
+    &:before {
+      background: url('../images/triangle_yellow_footer.png') no-repeat 0 0;
+      background-size: initial;
+      position: absolute;
+      bottom: 0;
+      height: $FOOTER_WIDTH * .605;
+      z-index: -1;
+      content: '';
+      display: block;
+      // left: 0;
+      right: 0;
+      width: $FOOTER_WIDTH;
+
+      @media screen and (max-width: $BP_MD) {
+        background-position: 200px 0;
+      }
+    }
   }
 }
 
@@ -136,7 +204,7 @@
 }
 
 .dc-card {
-  border: 5px solid $GRAY_1;
+  // border: 5px solid $GRAY_1;
   box-shadow: 0 10px 20px $SHADOW_COLOR;
   border-radius: 25px;
   padding: 36px 20px;
@@ -154,7 +222,6 @@
 }
 
 .dc-schedule {
-
   h4 {
     margin: 20px 0;
   }
@@ -176,6 +243,7 @@
     }
   }
 }
+
 .dc-faq {
   &--section {
     margin-bottom: 40px;
@@ -225,19 +293,13 @@
 }
 
 .dc-cta {
-  position: absolute;
-  top: 35%;
-  left: 0;
-  right: 0;
+  margin-top: 100px;
 
-  img {
-    width: 100%;
-  }
 }
 
 .dc-footer {
   // background-color: $GRAY_2;
-  position: absolute;
+  // position: absolute;
   bottom: 0;
   width: 100%;
   padding-bottom: 40px;
@@ -273,5 +335,36 @@
   &:visited {
     background-color: $ORANGE_1 !important;
     box-shadow: 0px 4px 20px $PINK_SHADOW;
+  }
+}
+
+.dc-footer {
+  &--icons {
+    margin-top: 50px;
+    padding: 14px 0;
+    list-style-type: none;
+    z-index: 1;
+    font-size: 24px;
+
+    li {
+      display: inline-block;
+      border: 3px solid $GRAY_1;
+      border-radius: 24px;
+      margin-left: 6px;
+
+      a {
+        display: block;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        line-height: 40px;
+      }
+    }
+  }
+}
+
+.dc-mobile-text-center {
+  @media screen and (max-width: $BP_MD) {
+    text-align: center;
   }
 }
