Fix large screen issues

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -59,3 +59,6 @@
 
   // Small desktop width upper bound (ie laptops)
   $BP_XL: 1200px;
+
+  // Large desktop width (for scaling up backgrounds)
+  $BP_XXL: 1440px;
