--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -73,7 +73,7 @@
       background: url('../images/triangle_green_bottom.png') no-repeat 100% 0;
       position: absolute;
       right: 0;
-      z-index: -1;  
+      z-index: -1;
 
       @media screen and (min-width: $BP_XL) {
         width: 100%;
@@ -259,6 +259,9 @@
 
   &--img {
     margin-bottom: 20px;
+    border-radius: 50%;
+    width: 170px;
+    height: 170px;
   }
   &--body {
     h3 {
