--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -256,6 +256,7 @@
   padding: 36px 20px;
   background: #FFF;
   margin-bottom: 30px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
 
   &--img {
     margin-bottom: 20px;
