Fixed mobile nav

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -2,10 +2,10 @@
 
 /* Fonts */
   // Font imports
-  @import url('https://fonts.googleapis.com/css?family=Varela+Round|Lato');
+  @import url('https://fonts.googleapis.com/css?family=Varela+Round|Lato|Rubik');
 
-  $HEADER_FONT: "Lato", Helvetica, sans-serif;
-  $TEXT_FONT: "Varela Round", Helvetica, sans-serif;
+  $HEADER_FONT: "Rubik", Helvetica, sans-serif;
+  $TEXT_FONT: "Rubik", Helvetica, sans-serif;
 
 /* Colors */
   $GRAY_1: #3D3D3D;
