--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -199,6 +199,7 @@
   height: 80vh;
   max-height: 800px;
   position: relative;
+  top: 100px;
   margin: 0;
   margin-bottom: 100px;
   padding-top: 100px;
@@ -263,6 +264,10 @@
   }
 }
 
+.mail-link {
+  color: $RED_1;
+  text-decoration: underline;
+}
 
 .dc-card {
   border-radius: 25px;
@@ -301,8 +306,12 @@
 }
 
 .dc-faq {
+
+
   &--section {
     margin-bottom: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
 
     h4 {
       margin: 24px 0;
@@ -311,7 +320,7 @@
   &--text {
     line-height: 24px;
     position: relative;
-    padding-left: 55px;
+    padding-left: 50px;
 
     &:before {
       content: ' ';
@@ -406,6 +415,14 @@
   }
   &:hover {
     background-color: lighten($ORANGE_1, 5%);
+  }
+}
+
+.dc-btn--footer {
+  border: 3px solid white;
+
+  &:hover {
+    border-color: rgba(0,0,0,0);
   }
 }
 
