--- a/scss/pages/_nav.scss
+++ b/scss/pages/_nav.scss
@@ -1,7 +1,10 @@
 .du-nav {
   width: 100%;
+  position: fixed;
+  background: $BACKGROUND_COLOR;
   top: 0;
   z-index: 8;
+  height: 100px;
 
   &--logo {
     margin-top: 18px;
@@ -90,6 +93,11 @@ $NAV_BODYBG: $WHITE;
 @-o-keyframes header_fadeIn {
   from { transform: translateY(-100px); }
   to { transform: translateY(0px); }
+}
+
+.menu-button {
+  width: 50px;
+  height: 50px;
 }
 .mobile-link {
   cursor: pointer;
