Hehehehe vincent was here

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -194,13 +194,13 @@
 }
 
 .dc-about {
-
 }
 
 .dc-hero {
   height: 80%;
   height: 80vh;
   max-height: 800px;
+  min-height: 600px;
   position: relative;
   top: 100px;
   margin: 0;
