--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -280,6 +280,7 @@
 
   &--img {
     margin-bottom: 20px;
+    margin-top: 20px;
     border-radius: 50%;
     width: 170px;
     height: 170px;
@@ -450,6 +451,23 @@
         line-height: 40px;
       }
     }
+  }
+}
+
+.dc-breakout {
+  
+  .dc-divider {
+    background: $SALMON;
+    height: 10px;
+    border-radius: 25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .session {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
   }
 }
 
